# daily_checks_audit

./: .env.example  .gitignore  AZURE_TROUBLESHOOTING_SUMMARY.md  Dockerfile  TODO.md  inspect_fastmcp.py  inspect_mcp.py  inspect_middleware.py  inspect_routes.py  inspect_routes_deep.py  main.py  pyproject.toml  reproduce_issue.py  verify_installation.py
.agent/rules/: git-commit.md
.agent/skills/daily-checks-audit/: SKILL.md
.agent/skills/daily-checks-audit/configs/: BSW_config.json  COREX_config.json  SONOCO_config.json  TBS_config.json
.agent/skills/daily-checks-audit/scripts/: audit_checks.py  screenshot_validator.py
.github/workflows/: deploy.yml
scripts/: deploy_aca.ps1
src/: server.py  server_http.py
