[project]
name = "daily-checks-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.25.0",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "starlette>=0.52.1",
    "uvicorn>=0.40.0",
]
